# activitywatch-tempo

./: .gitignore  .gitlab-ci.yml  README.md  activitywatch-tempo.py  config.json  mappings.json  pyproject.toml  static_tasks.json
awtempo/: __init__.py  activity_watch.py  automation_manager.py  cli.py  config_manager.py  jira_tempo.py  models.py  time_processor.py
awtempo/defaults/: config.json  mappings.json
tests/: test_cli_update_config.py  test_modular_structure.py  test_rounding.py
