[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "awtempo"
version = "0.1.0"
description = "ActivityWatch to Jira Tempo automation script"
authors = [{name = "ActivityWatch Tempo"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
aw-tempo = "awtempo.__main__:main"

[tool.setuptools]
packages = ["awtempo"]

[tool.setuptools.package-data]
awtempo = ["defaults/*.json"]
